--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "node ./scripts/deploy.js"
   },
   "author": "Vito Paparella Santorsola",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "shelljs": "^0.8.5",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
   }
